--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,13 +4,11 @@
         "es2021": true,
         "node": true
     },
-    "extends": [
-        "airbnb-base"
-    ],
+    "extends": ["airbnb-base", "prettier"],
     "parserOptions": {
         "ecmaVersion": "latest"
     },
     "rules": {
-        "linebreak-style":"off"
+      
     }
 }
