--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "fresh-pet",
   "version": "1.0.0",
+   "engines": {
+    "node": "16.x"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
