Price Filter Relates #53

--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^6.2.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-dual-range-slider": "^1.0.4",
     "react-icons": "^4.3.1",
     "react-router-dom": "4.3.1",
     "react-scripts": "5.0.0",
