--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fresh-pet",
   "version": "1.0.0",
-   "engines": {
+  "engines": {
     "node": "16.x"
   },
   "description": "",
@@ -10,10 +10,8 @@
     "start": "cross-env NODE_ENV=production node server/server.js",
     "dev": "cross-env NODE_ENV=development nodemon server/server.js",
     "dev:client": "cd client && yarn start",
-    "build-db": "cross-env NODE_ENV=production node server/database/config/build.js",
-    "build-db:dev": "cross-env NODE_ENV=development node server/database/config/build.js",
     "test": "jest",
-    "heroku-postbuild": "cd client && npm install yarn && yarn install && yarn run build"
+    "heroku-postbuild": "cd client && yarn install && yarn run build"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
