change heroku-postbuild script

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build-db": "cross-env NODE_ENV=production node server/database/config/build.js",
     "build-db:dev": "cross-env NODE_ENV=development node server/database/config/build.js",
     "test": "jest",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "heroku-postbuild": "cd client && yarn install --ignore-engines && yarn run build"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
