--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "fresh-pet",
   "version": "1.0.0",
   "engines": {
-    "node": "16.x"
+    "node": "16.13.2",
+    "npm":"8.5.5",
+    "yarn":"1.22.18"
   },
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node server/server.js",
+    "start": "NODE_ENV=production node server/server.js",
     "dev": "cross-env NODE_ENV=development nodemon server/server.js",
     "dev:client": "cd client && yarn start",
     "build-db": "cross-env NODE_ENV=production node server/database/config/build.js",
