--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "start": "NODE_ENV=production node server/server.js",
     "dev": "cross-env NODE_ENV=development nodemon server/server.js",
     "dev:client": "cd client && yarn start",
-    "build-db": "cross-env NODE_ENV=production node server/database/config/build.js",
-    "build-db:dev": "cross-env NODE_ENV=development node server/database/config/build.js",
+    "build": "NODE_ENV=production node server/database/config/build.js",
+    "build:dev": "cross-env NODE_ENV=development node server/database/config/build.js",
     "test": "jest",
     "heroku-postbuild": "cd client && yarn install --ignore-engines && yarn run build"
   },
